--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,9 @@
     "typescript-eslint": "^8.29.1"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "dotenv": "^16.5.0",
+    "envalid": "^8.0.0",
+    "express": "^5.1.0",
+    "mongoose": "^8.13.2"
   }
 }
