--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@eslint/js": "^9.24.0",
     "@types/express": "^5.0.1",
+    "@types/morgan": "^1.9.9",
     "eslint": "^9.24.0",
     "globals": "^16.0.0",
     "nodemon": "^3.1.9",
