--- a/backend/package.json
+++ b/backend/package.json
@@ -23,9 +23,11 @@
     "typescript-eslint": "^8.29.1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "envalid": "^8.0.0",
     "express": "^5.1.0",
-    "mongoose": "^8.13.2"
+    "mongoose": "^8.13.2",
+    "morgan": "^1.10.0"
   }
 }
