--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "bootstrap": "^5.3.5",
+    "lucide-react": "^0.501.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.1.0",
