--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.24.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.1",
+    "@types/express-session": "^1.18.1",
     "@types/morgan": "^1.9.9",
     "eslint": "^9.24.0",
     "globals": "^16.0.0",
@@ -23,10 +25,13 @@
     "typescript-eslint": "^8.29.1"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "envalid": "^8.0.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "mongoose": "^8.13.2",
     "morgan": "^1.10.0"
   }
