--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@eslint/js": "^9.24.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/connect-mongo": "^3.1.2",
     "@types/express": "^5.0.1",
     "@types/express-session": "^1.18.1",
     "@types/morgan": "^1.9.9",
